--- a/Group9/Views/Base.lproj/Main.storyboard
+++ b/Group9/Views/Base.lproj/Main.storyboard
@@ -15,11 +15,14 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Wdf-0n-xW0" customClass="MainTabBarController" customModule="Group9" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="z79-td-uja">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="M80-ee-Dzv" kind="relationship" relationship="viewControllers" id="pmI-76-Cl9"/>
+                        <segue destination="zyB-wG-24U" kind="relationship" relationship="viewControllers" id="WWK-us-91E"/>
+                        <segue destination="Xer-e1-IhQ" kind="relationship" relationship="viewControllers" id="Z3B-wy-wzP"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d0b-IY-3gj" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -35,6 +38,26 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qg9-LH-WVS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2234" y="-581"/>
+        </scene>
+        <!--Search-->
+        <scene sceneID="5zJ-al-657">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Search" id="zyB-wG-24U" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="ey6-OJ-RDb"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bnK-gm-hci" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2247" y="-397"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="kic-lX-CYa">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Profile" id="Xer-e1-IhQ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="RvN-Db-zah"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tlk-W0-zag" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2248" y="-206"/>
         </scene>
     </scenes>
 </document>
