--- a/Group9/Views/Components/StoreCollectionCell.xib
+++ b/Group9/Views/Components/StoreCollectionCell.xib
@@ -12,29 +12,86 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="storeCell" id="gTV-IL-0wX" customClass="StoreCollectionCell" customModule="Group9" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="179" height="248"/>
+            <rect key="frame" x="0.0" y="0.0" width="215" height="246"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="179" height="248"/>
+                <rect key="frame" x="0.0" y="0.0" width="215" height="246"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aFR-ib-X0z">
-                        <rect key="frame" x="0.0" y="0.0" width="179" height="248"/>
+                        <rect key="frame" x="0.0" y="0.0" width="215" height="246"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Store Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Dm-8q-5bA">
-                                <rect key="frame" x="10" y="217" width="91" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="1Z8-40-ykg"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <rect key="frame" x="0.0" y="155" width="215" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" red="0.21176470588235294" green="0.38431372549019605" blue="0.16862745098039217" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default-img" translatesAutoresizingMaskIntoConstraints="NO" id="TI4-3r-ZnW">
+                                <rect key="frame" x="0.0" y="0.0" width="215" height="145"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="145" id="PEr-Ee-ny4"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.8 km - BSD, Tanggerang Selatan" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pi4-xN-LDM">
+                                <rect key="frame" x="0.0" y="175" width="215" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" red="0.49019607843137253" green="0.52941176470588236" blue="0.52156862745098043" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Closed, open in 20 minutes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="raj-UK-a4C">
+                                <rect key="frame" x="0.0" y="192.5" width="215" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" red="0.49019607840000001" green="0.52941176469999995" blue="0.52156862749999999" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" alignment="bottom" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="p0R-Kp-kMJ">
+                                <rect key="frame" x="0.0" y="212" width="115.5" height="15"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-star-30" translatesAutoresizingMaskIntoConstraints="NO" id="BEH-Dv-LIC">
+                                        <rect key="frame" x="0.0" y="0.0" width="15" height="15"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="15" id="6Rp-Th-oR6"/>
+                                            <constraint firstAttribute="width" constant="15" id="aNQ-4J-YEb"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.9 (120 ratings)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Dg-fX-2jK">
+                                        <rect key="frame" x="22" y="0.5" width="93.5" height="14.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <color key="textColor" red="0.49019607840000001" green="0.52941176469999995" blue="0.52156862749999999" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5gu-V7-5S2">
+                                <rect key="frame" x="176" y="7" width="32" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="6Ox-Vr-gKT"/>
+                                    <constraint firstAttribute="width" constant="32" id="jUm-Eq-doe"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <state key="normal" image="love-button"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="0Dm-8q-5bA" firstAttribute="leading" secondItem="aFR-ib-X0z" secondAttribute="leading" constant="10" id="6gD-Vp-iHl"/>
-                            <constraint firstAttribute="bottom" secondItem="0Dm-8q-5bA" secondAttribute="bottom" constant="10" id="jPW-2w-VDi"/>
+                            <constraint firstItem="p0R-Kp-kMJ" firstAttribute="top" secondItem="raj-UK-a4C" secondAttribute="bottom" constant="5" id="0iv-NG-XLg"/>
+                            <constraint firstAttribute="trailing" secondItem="TI4-3r-ZnW" secondAttribute="trailing" id="AmV-Mm-hq3"/>
+                            <constraint firstItem="raj-UK-a4C" firstAttribute="leading" secondItem="aFR-ib-X0z" secondAttribute="leading" id="Aun-XC-mS5"/>
+                            <constraint firstItem="TI4-3r-ZnW" firstAttribute="leading" secondItem="aFR-ib-X0z" secondAttribute="leading" id="BRe-ID-LE5"/>
+                            <constraint firstAttribute="width" constant="215" id="F0E-Ed-zt1"/>
+                            <constraint firstAttribute="trailing" secondItem="Pi4-xN-LDM" secondAttribute="trailing" id="GUW-4q-MZw"/>
+                            <constraint firstItem="Pi4-xN-LDM" firstAttribute="leading" secondItem="aFR-ib-X0z" secondAttribute="leading" id="Jsy-ng-DvS"/>
+                            <constraint firstItem="5gu-V7-5S2" firstAttribute="top" secondItem="aFR-ib-X0z" secondAttribute="top" constant="7" id="Kz1-i2-LzV"/>
+                            <constraint firstItem="0Dm-8q-5bA" firstAttribute="top" secondItem="TI4-3r-ZnW" secondAttribute="bottom" constant="10" id="Poz-r2-Xwm"/>
+                            <constraint firstAttribute="trailing" secondItem="5gu-V7-5S2" secondAttribute="trailing" constant="7" id="QlS-qH-26F"/>
+                            <constraint firstItem="0Dm-8q-5bA" firstAttribute="leading" secondItem="aFR-ib-X0z" secondAttribute="leading" id="S8Y-Ee-BNd"/>
+                            <constraint firstAttribute="trailing" secondItem="0Dm-8q-5bA" secondAttribute="trailing" id="Xuc-3i-bht"/>
+                            <constraint firstItem="Pi4-xN-LDM" firstAttribute="top" secondItem="0Dm-8q-5bA" secondAttribute="bottom" constant="3" id="hrA-1G-9B9"/>
+                            <constraint firstItem="TI4-3r-ZnW" firstAttribute="top" secondItem="aFR-ib-X0z" secondAttribute="top" id="id1-Jp-h1U"/>
+                            <constraint firstItem="raj-UK-a4C" firstAttribute="top" secondItem="Pi4-xN-LDM" secondAttribute="bottom" constant="3" id="mFI-hU-2Zh"/>
+                            <constraint firstAttribute="trailing" secondItem="raj-UK-a4C" secondAttribute="trailing" id="rYt-7Z-acA"/>
+                            <constraint firstItem="p0R-Kp-kMJ" firstAttribute="leading" secondItem="aFR-ib-X0z" secondAttribute="leading" id="uSV-NV-Os4"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -47,9 +104,18 @@
             </constraints>
             <size key="customSize" width="179" height="248"/>
             <connections>
+                <outlet property="addressLabel" destination="Pi4-xN-LDM" id="nWe-rz-QfZ"/>
+                <outlet property="hourPlace" destination="raj-UK-a4C" id="eHa-u6-lCS"/>
+                <outlet property="imagePlace" destination="TI4-3r-ZnW" id="hEJ-sB-Xji"/>
                 <outlet property="nameLabel" destination="0Dm-8q-5bA" id="2HH-Lg-z3e"/>
+                <outlet property="ratingsLabel" destination="2Dg-fX-2jK" id="qjV-bu-qYT"/>
             </connections>
-            <point key="canvasLocation" x="231.15942028985509" y="202.90178571428569"/>
+            <point key="canvasLocation" x="345.6521739130435" y="201.5625"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="default-img" width="370" height="290"/>
+        <image name="icons8-star-30" width="30" height="30"/>
+        <image name="love-button" width="80" height="80"/>
+    </resources>
 </document>
