--- a/Group9/Views/Components/ArticleTableViewCell.xib
+++ b/Group9/Views/Components/ArticleTableViewCell.xib
@@ -19,29 +19,23 @@
                 <rect key="frame" x="0.0" y="0.0" width="414" height="205.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="IEC-cA-0tK">
-                        <rect key="frame" x="30" y="22" width="354" height="161"/>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="IEC-cA-0tK">
+                        <rect key="frame" x="20" y="22" width="374" height="161"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="YnG-7Y-fL1">
-                            <size key="itemSize" width="354" height="161"/>
+                        <inset key="scrollIndicatorInsets" minX="10" minY="0.0" maxX="20" maxY="0.0"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="Lz5-2N-NOF">
+                            <size key="itemSize" width="374" height="161"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
-                    <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="xus-xp-BBW">
+                    <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="xus-xp-BBW">
                         <rect key="frame" x="30" y="146" width="354" height="37"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </pageControl>
                 </subviews>
-                <constraints>
-                    <constraint firstItem="IEC-cA-0tK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="22" id="A4I-dP-Rnk"/>
-                    <constraint firstItem="xus-xp-BBW" firstAttribute="trailing" secondItem="IEC-cA-0tK" secondAttribute="trailing" id="H9N-QL-n6T"/>
-                    <constraint firstAttribute="trailing" secondItem="IEC-cA-0tK" secondAttribute="trailing" constant="30" id="Xut-oR-Ma0"/>
-                    <constraint firstItem="xus-xp-BBW" firstAttribute="bottom" secondItem="IEC-cA-0tK" secondAttribute="bottom" id="aLm-SI-rZr"/>
-                    <constraint firstItem="xus-xp-BBW" firstAttribute="leading" secondItem="IEC-cA-0tK" secondAttribute="leading" id="ab9-Th-ML9"/>
-                    <constraint firstItem="IEC-cA-0tK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="aez-Ej-L3H"/>
-                    <constraint firstAttribute="bottom" secondItem="IEC-cA-0tK" secondAttribute="bottom" constant="22.5" id="uqY-CC-OIT"/>
-                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
