--- a/Group9/Views/Components/RecomendedTableViewCell.xib
+++ b/Group9/Views/Components/RecomendedTableViewCell.xib
@@ -12,44 +12,38 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="recomendedTableViewCell" rowHeight="367" id="KGk-i7-Jjw" customClass="RecomendedTableViewCell" customModule="Group9" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="367"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="recomendedTableViewCell" rowHeight="280" id="KGk-i7-Jjw" customClass="RecomendedTableViewCell" customModule="Group9" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="280"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="366.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="279.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="aD3-Lj-b5V">
-                        <rect key="frame" x="0.0" y="80" width="414" height="286"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Recomended For You" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H0W-t6-AJe">
+                        <rect key="frame" x="20" y="12" width="288" height="36"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="aD3-Lj-b5V">
+                        <rect key="frame" x="0.0" y="55" width="414" height="203"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="rIq-ZM-Cao">
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="20" minimumInteritemSpacing="0.0" id="rIq-ZM-Cao">
                             <size key="itemSize" width="166" height="203"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recomended For You" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H0W-t6-AJe">
-                        <rect key="frame" x="20" y="23" width="288" height="36"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
-                <constraints>
-                    <constraint firstAttribute="bottom" secondItem="aD3-Lj-b5V" secondAttribute="bottom" constant="0.5" id="1ph-9F-1ka"/>
-                    <constraint firstItem="H0W-t6-AJe" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="23" id="B5C-Ae-WXU"/>
-                    <constraint firstItem="aD3-Lj-b5V" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="QOt-Bn-iEk"/>
-                    <constraint firstItem="aD3-Lj-b5V" firstAttribute="top" secondItem="H0W-t6-AJe" secondAttribute="bottom" constant="21" id="dZg-1p-5Uv"/>
-                    <constraint firstItem="H0W-t6-AJe" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="iV8-rh-PpW"/>
-                    <constraint firstAttribute="trailing" secondItem="aD3-Lj-b5V" secondAttribute="trailing" id="vNw-G9-43i"/>
-                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="recomendedCollectionView" destination="aD3-Lj-b5V" id="P1R-24-fQA"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="170.42410714285714"/>
+            <point key="canvasLocation" x="137.68115942028987" y="140.625"/>
         </tableViewCell>
         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="5jX-8L-qOU">
             <rect key="frame" x="0.0" y="0.0" width="42" height="21"/>
