--- a/Group9/Views/NearBy.storyboard
+++ b/Group9/Views/NearBy.storyboard
@@ -13,7 +13,7 @@
         <!--Nearby-->
         <scene sceneID="Kfe-9i-4EG">
             <objects>
-                <viewController id="v8C-1L-d4J" customClass="NearByControllerViewController" customModule="Group9" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="nearByViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="v8C-1L-d4J" customClass="NearByControllerViewController" customModule="Group9" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="L8f-9m-iwf">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -44,11 +44,41 @@
                     <navigationItem key="navigationItem" title="Nearby" largeTitleDisplayMode="always" id="X4O-MP-G4m"/>
                     <connections>
                         <outlet property="nearbyTableView" destination="2KJ-qv-8gB" id="IVe-Vw-Mqm"/>
+                        <segue destination="4dW-Gq-Xqj" kind="show" identifier="webViewSegue" id="UPL-9E-t8q"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tgm-Fn-Zee" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1239.1304347826087" y="-38.169642857142854"/>
+            <point key="canvasLocation" x="1183" y="-38"/>
+        </scene>
+        <!--Web View Controller-->
+        <scene sceneID="xsJ-y5-8by">
+            <objects>
+                <viewController storyboardIdentifier="webViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="4dW-Gq-Xqj" customClass="WebViewController" customModule="Group9" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Kzc-QQ-a8w">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" fixedFrame="YES" allowsBackForwardNavigationGestures="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EDg-RP-rHg">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="DRL-5y-X1u"/>
+                    </view>
+                    <connections>
+                        <outlet property="webView" destination="EDg-RP-rHg" id="wOY-4A-Rwh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dll-e1-0nQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2186.9565217391305" y="-38.169642857142854"/>
         </scene>
         <!--Near By-->
         <scene sceneID="aXf-Cm-4cu">
