--- a/Group9/Views/Components/RecomendedCollectionViewCell.xib
+++ b/Group9/Views/Components/RecomendedCollectionViewCell.xib
@@ -19,60 +19,48 @@
                 <rect key="frame" x="0.0" y="0.0" width="166" height="203"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img2" translatesAutoresizingMaskIntoConstraints="NO" id="zvo-Cx-VuB">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="img2" translatesAutoresizingMaskIntoConstraints="NO" id="zvo-Cx-VuB">
+                        <rect key="frame" x="0.0" y="0.0" width="166" height="203"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.84999999999999998" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GradientBackgroundPotrait" translatesAutoresizingMaskIntoConstraints="NO" id="GjS-jU-ANP">
                         <rect key="frame" x="0.0" y="0.0" width="166" height="203"/>
                     </imageView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5my-Uv-65t">
-                        <rect key="frame" x="0.0" y="0.0" width="166" height="203"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="The highest rating store in Jakarta selatan" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kj7-XP-37r">
-                                <rect key="frame" x="8" y="171" width="150" height="24"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Bulk Store " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5qR-A0-2Vo">
-                                <rect key="frame" x="8" y="146" width="150" height="22"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="0.66941352739726023" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="Kj7-XP-37r" firstAttribute="top" secondItem="5qR-A0-2Vo" secondAttribute="bottom" constant="3" id="6Hx-4X-edB"/>
-                            <constraint firstAttribute="trailing" secondItem="Kj7-XP-37r" secondAttribute="trailing" constant="8" id="DBX-zY-xXd"/>
-                            <constraint firstItem="5qR-A0-2Vo" firstAttribute="leading" secondItem="5my-Uv-65t" secondAttribute="leading" constant="8" id="ZvD-8F-XPx"/>
-                            <constraint firstItem="Kj7-XP-37r" firstAttribute="leading" secondItem="5my-Uv-65t" secondAttribute="leading" constant="8" id="hk3-Ld-rRd"/>
-                            <constraint firstAttribute="trailing" secondItem="5qR-A0-2Vo" secondAttribute="trailing" constant="8" id="uxU-uv-dlp"/>
-                            <constraint firstAttribute="bottom" secondItem="Kj7-XP-37r" secondAttribute="bottom" constant="8" id="wkf-K5-OhH"/>
-                            <constraint firstItem="5qR-A0-2Vo" firstAttribute="top" secondItem="5my-Uv-65t" secondAttribute="top" constant="146" id="y13-yE-VWM"/>
-                        </constraints>
-                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" fixedFrame="YES" text="The highest rating store in Jakarta selatan" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kj7-XP-37r">
+                        <rect key="frame" x="8" y="170" width="150" height="24"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" fixedFrame="YES" text="Ada Store " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5qR-A0-2Vo">
+                        <rect key="frame" x="8" y="145" width="150" height="22"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="5my-Uv-65t" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="CL7-Gm-Jbc"/>
-                <constraint firstAttribute="bottom" secondItem="zvo-Cx-VuB" secondAttribute="bottom" id="EXR-Pl-ArP"/>
-                <constraint firstItem="zvo-Cx-VuB" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="G2Z-DL-Hrf"/>
-                <constraint firstItem="5my-Uv-65t" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="HEJ-ho-h07"/>
-                <constraint firstAttribute="trailing" secondItem="zvo-Cx-VuB" secondAttribute="trailing" id="Vh9-zI-fhX"/>
-                <constraint firstItem="zvo-Cx-VuB" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Wyy-kT-crt"/>
-                <constraint firstAttribute="bottom" secondItem="5my-Uv-65t" secondAttribute="bottom" id="Zo6-4p-nDX"/>
-                <constraint firstAttribute="trailing" secondItem="5my-Uv-65t" secondAttribute="trailing" id="ksx-bm-g4B"/>
+                <constraint firstItem="GjS-jU-ANP" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="7DI-V1-Ilg"/>
+                <constraint firstAttribute="bottom" secondItem="GjS-jU-ANP" secondAttribute="bottom" id="NbO-eX-dEa"/>
+                <constraint firstAttribute="trailing" secondItem="GjS-jU-ANP" secondAttribute="trailing" id="bGj-Um-0ag"/>
+                <constraint firstItem="GjS-jU-ANP" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="hdi-YD-gaN"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="79" height="79"/>
             <connections>
+                <outlet property="gradientBackground" destination="GjS-jU-ANP" id="GYG-q8-AB1"/>
                 <outlet property="recommendedDescription" destination="Kj7-XP-37r" id="ODg-hD-9Sx"/>
                 <outlet property="recommendedImage" destination="zvo-Cx-VuB" id="9tM-45-PQb"/>
                 <outlet property="recommendedTitle" destination="5qR-A0-2Vo" id="Pvk-Oo-I8F"/>
-                <outlet property="transparentBackground" destination="5my-Uv-65t" id="Wxb-9u-dXR"/>
             </connections>
             <point key="canvasLocation" x="155.07246376811597" y="130.24553571428572"/>
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="GradientBackgroundPotrait" width="284" height="347"/>
         <image name="img2" width="5184" height="3456"/>
     </resources>
 </document>
