--- a/Group9/Views/Components/RecomendedTableViewCell.xib
+++ b/Group9/Views/Components/RecomendedTableViewCell.xib
@@ -23,7 +23,7 @@
                         <rect key="frame" x="20" y="12" width="288" height="36"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" red="0.21176470588235294" green="0.38431372549019605" blue="0.16862745098039217" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="aD3-Lj-b5V">
